2012-03-10  Vladimir Serbinenko  <phcoder@gmail.com>

	* Makefile.am: Strip gold section.
	* conf/Makefile.common: Likewise.
	* gentpl.py: Likewise.
	* grub-core/Makefile.core.def: Likewise.
	* grub-core/genmod.sh.in: Likewise.

2012-03-10  Vladimir Serbinenko  <phcoder@gmail.com>

	* util/grub.d/10_linux.in: Use stat if grub-probe on root fails.
	* util/grub.d/20_linux_xen.in: Likewise.
	Based on Debian patch.

2012-03-10  Vladimir Serbinenko  <phcoder@gmail.com>

	* util/grub.d/10_linux.in: Fix syntax error resulting in
	Richard Laager's patch.
	* util/grub.d/20_linux_xen.in: Propagate Richard Laager's patch.

2012-03-10  Vladimir Serbinenko  <phcoder@gmail.com>

	* tests/partmap_test.in: Replace qemu-img usage with dd to decrease
	dependencies.

2012-03-10  Richard Laager <rlaager@wiktel.com>

	* util/grub.d/10_linux.in: Fix ZFS root passing.

2012-03-10  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/commands/videoinfo.c: Add TRANSLATORS comments.
	* grub-core/commands/xnu_uuid.c: Likewise.
	* grub-core/loader/efi/appleloader.c: Likewise.
	* grub-core/script/execute.c: Likewise.
	* grub-core/script/main.c: Likewise.
	* util/grub-mkfont.c: Likewise.

2012-03-10  Vladimir Serbinenko  <phcoder@gmail.com>

	* util/grub-mkfont.c (options): Use more appropriate "select" that
	"set" for face index.

2012-03-10  Vladimir Serbinenko  <phcoder@gmail.com>

	* util/grub-editenv.c (options): Gettextize command summaries.

2012-03-10  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/loader/efi/chainloader.c (grub_cmd_chainloader): Use
	"out of memory" error messagge.

2012-03-10  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/disk/diskfilter.c (grub_diskfilter_memberlist): Add scanning
	of diskfilter for diskfilter on diskfilter support.

2012-03-10  Vladimir Serbinenko  <phcoder@gmail.com>

	* util/getroot.c (exec_pipe): Ensure that the child is not localised.

2012-03-10  Vladimir Serbinenko  <phcoder@gmail.com>
